--- a/public/index.html
+++ b/public/index.html
@@ -13,35 +13,37 @@
     <script defer src="js/app.js"></script>
 </head>
 <body>
-    <div class="start-scene scene-show">
-        <div class="overlay-create">
-            <div class="create-form">
-                <p class="username-msg">Enter a name</p>
-                <input class="username-create" type="text" name="username-create">
-                <a href="#" class="form-btn-create">Create</a>
-                <a href="#" class="form-create-btn-cancel">Cancel</a>
+    <div class="start-scene">
+        <div class="overlay-start-scene overlay-create">
+            <div class="create-container">
+                <p>Enter a name</p>
+                <input class="input username" type="text" name="username">
+                <a href="#" class="btn create">Create</a>
+                <a href="#" class="btn cancel">Cancel</a>
             </div>
         </div>
-        <div class="overlay-join">
-            <div class="join-form">
-                <p class="username-msg">Enter a name</p>
-                <input class="username-join" type="text" name="username-join">
-                <p class="pin-msg">Enter pin</p>
-                <input class="pin-code" type="text" name="pin-code" placeholder="########">
-                <a href="#" class="form-btn-join">Join</a>
-                <a href="#" class="form-join-btn-cancel">Cancel</a>
+        <div class="overlay-start-scene overlay-join">
+            <div class="join-container">
+                <p>Enter a name</p>
+                <input class="input username" type="text" name="username">
+                <p>Enter pin</p>
+                <input class="input pin" type="text" name="pin" placeholder="########">
+                <a href="#" class="btn join">Join</a>
+                <a href="#" class="btn cancel">Cancel</a>
             </div>
         </div>
-        <h1 class="game-title">Simple <span>Tic Tac Toe</span></h1>
-        <p class="create-msg">Create a game</p>
-        <a href="#" class="btn-create">Create</a>
-        <span class="divisor">or</span>
-        <p class="join-msg">Join a game</p>
-        <a href="#" class="btn-join">Join</a>
+        <div class="start-container">
+            <h1 class="title">Simple <span>Tic Tac Toe</span></h1>
+            <p>Create a game</p>
+            <a href="#" class="btn create">Create</a>
+            <span class="divisor">or</span>
+            <p>Join a game</p>
+            <a href="#" class="btn join">Join</a>
+        </div>
     </div>
-    <div class="game-scene">
-        <p class="game-state"></p>
-        <p class="players"><span class="player-one"></span> vs <span class="player-two"></span></p>
+    <div class="game-scene show-scene">
+        <p class="game-state">FINISHED</p>
+        <p class="players"><span class="player-one">brad</span> vs <span class="player-two">chad</span></p>
         <div class="overlay-game-pin">
             <div class="game-pin-msg">
                 <p class="msg-pin">This is your PIN</p>
