--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 
     <script defer src="socket.io/socket.io.js"></script>
     <script defer src="js/common.js"></script>
-    <!-- <script defer src="js/ui.js"></script> -->
     <script defer src="js/app.js"></script>
 </head>
 <body>
@@ -64,7 +63,7 @@
         </div>
         <div class="overlay-game-scene overlay-game-end">
             <div class="game-end-container">
-                <p>Brad's won</p>
+                <p><span></span> won</p>
                 <a href="#" class="btn restart">Play again</a>
             </div>
         </div>
