--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,13 @@
                 <a href="#" class="btn restart">Play again</a>
             </div>
         </div>
+        <div class="overlay-game-scene overlay-play-again">
+            <div class="play-again-container">
+                <p></p>
+                <a href="#" class="btn accept">Accept</a>
+                <a href="#" class="btn decline">Decline</a>
+            </div>
+        </div>
         <div class="game-container">
             <a class="cell" data-position='0' href="#"></a>
             <a class="cell" data-position='1' href="#"></a>
